<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/brunelBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top paragraph -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:text="@string/loginhelptext1"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="gravity"
        android:gravity="center_vertical"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold" />

    <!-- Contains second paragraph -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:text="@string/loginhelpnumbering1"
            android:textAlignment="gravity"
            android:gravity="right"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:text="@string/loginhelptext2"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <!-- Contains third paragraph -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:text="@string/Loginhelpnumbering2"
            android:textAlignment="gravity"
            android:gravity="right"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:text="@string/loginhelptext3"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <!-- Final paragraph -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:text="@string/loginhelptext4"
        android:textSize="18sp"
        android:textAlignment="gravity"
        android:gravity="top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="normal|bold" />
</LinearLayout>