<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/brunelBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Fills in the blank spaces for now. -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25" />

    <!-- Image row, contains ImageView and filler objects.  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">
        <!-- Fills in the blank spaces for now. -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <!-- Represents the Brunel Logo. -->
        <ImageView
            android:id="@+id/brunel_logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:src="@drawable/brunel_logo"
            android:adjustViewBounds="false"
            android:cropToPadding="false" />

        <!-- Fills in the blank spaces for now. -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />
    </LinearLayout>

    <!-- Fills in the blank spaces for now. -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

    <!-- Username row, contains TextView and filler objects.  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <!-- Fills in the blank spaces for now. -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <!-- Username Form -->
        <EditText
            android:id="@+id/username_form"
            android:background="@drawable/textview_rounded_form"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/usernamedefault"
            android:textColor="@color/textFontForm"
            android:textAlignment="gravity"
            android:gravity="center"/>

        <!-- Fills in the blank spaces for now. -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />
    </LinearLayout>

    <!-- Password row, contains TextView and filler objects.  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <!-- Fills in the blank spaces for now. -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <!-- Password Form -->
        <EditText
            android:id="@+id/password_form"
            android:background="@drawable/textview_rounded_form"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/passworddefault"
            android:textColor="@color/textFontForm"
            android:textAlignment="gravity"
            android:gravity="center" />

        <!-- Fills in the blank spaces for now. -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />
    </LinearLayout>

    <!-- Login button row, including fillers. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:orientation="horizontal">
        <!-- Fills in the blank spaces for now. -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.275" />

        <!-- Login Button -->
        <Button
            android:id="@+id/login_button"
            android:background="@drawable/textview_rounded_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:text="Login"
            android:textColor="@color/textFontLogin"
            android:textAlignment="gravity"
            android:gravity="center" />

        <!-- Fills in the blank spaces for now. -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.275" />
    </LinearLayout>

    <!-- Fills in the blank spaces for now. -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4" />

    <!-- Login Help Description -->
    <TextView
        android:id="@+id/login_help"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:text="@string/loginhelp"
        android:textColor="@color/textFontForm"
        android:textAlignment="gravity"
        android:gravity="center" />

</LinearLayout>